--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="template_date_templateEdit">template date</string>
     <string name="add_template">+ add template</string>
     <string name="edit_template">edit template</string>
+    <string name="number_of_repetitions">number of repetitions</string>
+    <string name="number_of_approaches">number of approaches</string>
+    <string name="add_exercise">+ ADD EXERCISE</string>
+    <string name="add_exercise_floating_button">+ add exercise</string>
+    <string name="exercises">Exercises</string>
 </resources>
