--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="number_of_repetitions_edit">Number Of Repetitions</string>
     <string name="dialog_left_button_text">ADD EXERCISE</string>
     <string name="dialog_right_button_text">CANCEL</string>
+    <string name="exercises_list_is_empty">Exercises list is empty</string>
 </resources>
